// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for App should Match with snapshot 1`] = `
<div
  className="principal-container"
>
  <div
    className="header"
  >
    <svg
      viewBox="0 0 1440 320"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0,32L120,42.7C240,53,480,75,720,74.7C960,75,1200,53,1320,42.7L1440,32L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"
        fill="#0099ff"
        fill-opacity="1"
      />
    </svg>
    <h2>
      GIPHY FINDER
    </h2>
    <AddCategory
      setcategories={[Function]}
    />
  </div>
  <div
    className="space"
  />
  <div
    className="body-card"
  >
    <ol />
  </div>
</div>
`;

exports[`Tests for App should show a categories list 1`] = `
<div
  className="principal-container"
>
  <div
    className="header"
  >
    <svg
      viewBox="0 0 1440 320"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0,32L120,42.7C240,53,480,75,720,74.7C960,75,1200,53,1320,42.7L1440,32L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"
        fill="#0099ff"
        fill-opacity="1"
      />
    </svg>
    <h2>
      GIPHY FINDER
    </h2>
    <AddCategory
      setcategories={[Function]}
    />
  </div>
  <div
    className="space"
  />
  <div
    className="body-card"
  >
    <ol>
      <GifGrid
        category="Goku"
        key="Goku"
      />
    </ol>
  </div>
</div>
`;
